force-app/main/default/objects/FluentMetric_Cost_Settings__c/FluentMetric_Cost_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Org-level overrides for FluentMetric AI cost calculations — USD/credit contract rate, discount percent, fallback model key.</description>
    <label>FluentMetric Cost Settings</label>
</CustomObject>