force-app/main/default/objects/FluentMetric_Cost_Settings__c/fields/Action_Flat_FC__c.field-meta.xml
<CustomField>
    <fullName>Action_Flat_FC__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Flex Credits charged per Agentforce Standard/Custom Action invocation. Matches Salesforce public rate (20 FC). Voice Actions are not differentiated in v1.5.</description>
    <label>Action Flat FC</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>