force-app/main/default/objects/FluentMetric_Cost_Settings__c/fields/Action_Token_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Action_Token_Threshold__c</fullName>
    <defaultValue>10000</defaultValue>
    <description>Tokens per Agentforce Action invocation tier charge. Every full multiple (ceil) re-charges the Action flat FC. Default 10000 matches Salesforce public rate.</description>
    <label>Action Token Threshold</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>