force-app/main/default/objects/FluentMetric_Cost_Settings__c/fields/Custom_Action_FC__c.field-meta.xml
<CustomField>
    <fullName>Custom_Action_FC__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Flex Credits charged per Agentforce Custom Action invocation. Matches Salesforce public rate (20 FC, Production).</description>
    <label>Custom Action FC</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>