force-app/main/default/objects/FluentMetric_Cost_Settings__c/fields/Custom_Voice_Action_FC__c.field-meta.xml
<CustomField>
    <fullName>Custom_Voice_Action_FC__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Flex Credits charged per Agentforce Custom Voice Action invocation. Matches Salesforce public rate (30 FC, Production).</description>
    <label>Custom Voice Action FC</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>