force-app/main/default/objects/FluentMetric_Cost_Settings__c/fields/Default_Fallback_Model__c.field-meta.xml
<CustomField>
    <fullName>Default_Fallback_Model__c</fullName>
    <defaultValue>"Standard-Default"</defaultValue>
    <description>Model key in FluentMetric_Rate_Card__mdt to use when a DMO request has no matching rate card record.</description>
    <label>Default Fallback Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>