force-app/main/default/objects/FluentMetric_Cost_Settings__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Org's contracted discount percentage, 0-100. Applied to base USD cost.</description>
    <label>Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>