force-app/main/default/objects/FluentMetric_Cost_Settings__c/fields/Enable_Cost_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Enable_Cost_Metrics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opt-in for cost analytics. When false (default), all cost fields on DTOs return zero and the UI hides cost cards, columns, and the Cost tab. Admins enable this only after reviewing the Flex Credits Rate Card disclaimer; the dashboard estimates LLM prompt + action charges only and does not reflect Data Cloud retrieval, unmetered models, or fine-tuning costs.</description>
    <inlineHelpText>When off, cost analytics are hidden across the app. When on, the Cost tab and cost columns appear using FluentMetric_Rate_Card__mdt values. See the Cost Settings panel for the full disclaimer.</inlineHelpText>
    <label>Enable Cost Metrics</label>
    <type>Checkbox</type>
</CustomField>