force-app/main/default/objects/FluentMetric_Cost_Settings__c/fields/Flex_Credit_USD_Rate__c.field-meta.xml
<CustomField>
    <fullName>Flex_Credit_USD_Rate__c</fullName>
    <defaultValue>0.004</defaultValue>
    <description>USD per Flex Credit — override for org-specific contract rates. Default 0.004 matches public Agentforce pricing.</description>
    <label>Flex Credit USD Rate</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>