force-app/main/default/objects/FluentMetric_Cost_Settings__c/fields/Prompt_Token_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Token_Threshold__c</fullName>
    <defaultValue>2000</defaultValue>
    <description>Tokens per prompt-invocation tier charge. Every full multiple of this threshold (ceil) re-charges the tier FC. Default 2000 matches Salesforce public rate.</description>
    <label>Prompt Token Threshold</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>