force-app/main/default/objects/FluentMetric_Cost_Settings__c/fields/Tier_Advanced_FC__c.field-meta.xml
<CustomField>
    <fullName>Tier_Advanced_FC__c</fullName>
    <defaultValue>16</defaultValue>
    <description>Flex Credits charged per Advanced-tier prompt invocation. Matches Salesforce public rate (16 FC).</description>
    <label>Tier Advanced FC</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>