force-app/main/default/objects/FluentMetric_Cost_Settings__c/fields/Tier_Basic_FC__c.field-meta.xml
<CustomField>
    <fullName>Tier_Basic_FC__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Flex Credits charged per Basic-tier prompt invocation. Matches Salesforce public rate (2 FC).</description>
    <label>Tier Basic FC</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>