force-app/main/default/objects/FluentMetric_Cost_Settings__c/fields/Tier_Standard_FC__c.field-meta.xml
<CustomField>
    <fullName>Tier_Standard_FC__c</fullName>
    <defaultValue>4</defaultValue>
    <description>Flex Credits charged per Standard-tier prompt invocation. Matches Salesforce public rate (4 FC).</description>
    <label>Tier Standard FC</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>