force-app/main/default/objects/FluentMetric_Cost_Settings__c/fields/Tier_Starter_FC__c.field-meta.xml
<CustomField>
    <fullName>Tier_Starter_FC__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Flex Credits charged per Bring-Your-Own-LLM (Starter) prompt invocation. Matches Salesforce public rate (2 FC).</description>
    <label>Tier Starter FC</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>