force-app/main/default/objects/FluentMetric_Cost_Settings__c/fields/Top_N_Prompt_Acceptance_Sample__c.field-meta.xml
<CustomField>
    <fullName>Top_N_Prompt_Acceptance_Sample__c</fullName>
    <defaultValue>25</defaultValue>
    <description>Phase 2.2 — number of top-volume prompts that get a SAMPLED acceptance rate via a bounded Request→Response→Generation→Feedback chain walk. Tail prompts (rank > N) keep the cheaper feature-correlation path. Tune down on busy orgs that brush against the 100-SOQL transaction limit; tune up if customers want SAMPLED coverage on more prompts. 0 disables sampling and reverts everything to CORRELATED.</description>
    <label>Top N Prompt Acceptance Sample</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>